# osiris

./: README.md  build.yml  package.json
.github/workflows/: build.yml
parser/: README.md  package.json
parser/lib/: index.js
parser/native/: Cargo.toml  moov-atom
parser/native/benches/: parsing.rs
parser/native/src/: lib.rs
parser/native/src/parsing/: error.rs  info.rs  mod.rs  parser.rs
parser/native/src/parsing/atoms/: edts.rs  elst.rs  free.rs  ftyp.rs  hdlr.rs  mdat.rs  mdhd.rs  mdia.rs  mod.rs  moov.rs  mvhd.rs  parse.rs  parser.rs  tkhd.rs  trak.rs  udta.rs
parser/native/src/utils/: atom_utils.rs  mod.rs  reader.rs
src/: index.html  index.js  main.js  menu-functions.js  menu.js  preload.js  style.css
